--- a/index.html
+++ b/index.html
@@ -18,18 +18,33 @@
 	</div>
 	
 
-	<div class="block"></div>
-	<div class="scroll" wight="200" height="300">
-		<div class="block_2"></div>
-		<div class="block_3"></div>
-		<div class="block_4"></div>
-	</div>
+	<div class="block"><img class="im_block" src="111.jpg"></div>
+	
+	<div class="blocky">
+		<div class="scroll" wight="200" height="300">
+			<section class="block_2"><img class="img_2" src="896586.jpg" width="488" height="300" alt="Клик для увеличения"></section>
+			<section class="block_2"><img class="img_2" src="eee.png" width="488" height="300" alt="Клик для увеличения"></section>
+			<section class="block_2"><img class="img_2" src="896586.jpg" width="488" height="300" alt="Клик для увеличения"></section>
+		</div>
 
+		<div class="scroll" wight="200" height="300">
+			<section class="block_2"><img class="img_2" src="896586.jpg" width="488" height="300" alt="Клик для увеличения"></section>
+			<section class="block_2"><img class="img_2" src="896586.jpg" width="488" height="300" alt="Клик для увеличения"></section>
+			<section class="block_2"><img class="img_2" src="896586.jpg" width="488" height="300" alt="Клик для увеличения"></section>
+		</div>
+
+		<div class="scroll" wight="200" height="300">
+			<section class="block_2"><img class="img_2" src="896586.jpg" width="488" height="300" alt="Клик для увеличения"></section>
+			<section class="block_2"><img class="img_2" src="896586.jpg" width="488" height="300" alt="Клик для увеличения"></section>
+			<section class="block_2"><img class="img_2" src="896586.jpg" width="488" height="300" alt="Клик для увеличения"></section>
+		</div>
+	</div>
 	
 	<div class="footer">
 		<p class="mail">LeykoderTO@gmail.com</p>
 	</div>
 
-
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+	<script type="text/javascript" src="script.js"></script>
 </body>
 </html>
