--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<link rel="stylesheet" type="text/css" href="rabot.css">
 	<title>hello</title>
 </head>
-<body>
+<body class="im_b">
 
 
 	<div class="head">
