--- a/index.html
+++ b/index.html
@@ -22,21 +22,48 @@
 	
 	<div class="blocky">
 		<div class="scroll" wight="200" height="300">
-			<section class="block_2"><img class="img_2" src="896586.jpg" width="488" height="300" alt="Клик для увеличения"></section>
-			<section class="block_2"><img class="img_2" src="eee.png" width="488" height="300" alt="Клик для увеличения"></section>
-			<section class="block_2"><img class="img_2" src="896586.jpg" width="488" height="300" alt="Клик для увеличения"></section>
+			<div>
+				<p class="up_block">Hello</p>
+				<section class="block_2"><img class="img_2" src="896586.jpg" width="488" height="300" alt="Клик для увеличения"></section>			
+			</div>
+			<div>
+				<p class="up_block" class="block_2">Hello</p>
+				<section class="block_2"><img class="img_2" src="896586.jpg" width="488" height="300" alt="Клик для увеличения"></section>			
+			</div>
+			<div>
+				<p class="up_block" class="block_2">Hello</p>
+				<section class="block_2"><img class="img_2" src="896586.jpg" width="488" height="300" alt="Клик для увеличения"></section>			
+			</div>
 		</div>
 
 		<div class="scroll" wight="200" height="300">
-			<section class="block_2"><img class="img_2" src="896586.jpg" width="488" height="300" alt="Клик для увеличения"></section>
-			<section class="block_2"><img class="img_2" src="896586.jpg" width="488" height="300" alt="Клик для увеличения"></section>
-			<section class="block_2"><img class="img_2" src="896586.jpg" width="488" height="300" alt="Клик для увеличения"></section>
+			<div>
+				<p class="up_block" class="block_2">Hello</p>
+				<section class="block_2"><img class="img_2" src="896586.jpg" width="488" height="300" alt="Клик для увеличения"></section>			
+			</div>
+			<div>
+				<p class="up_block" class="block_2">Hello</p>
+				<section class="block_2"><img class="img_2" src="896586.jpg" width="488" height="300" alt="Клик для увеличения"></section>			
+			</div>
+			<div>
+				<p class="up_block" class="block_2">Hello</p>
+				<section class="block_2"><img class="img_2" src="896586.jpg" width="488" height="300" alt="Клик для увеличения"></section>			
+			</div>
 		</div>
 
 		<div class="scroll" wight="200" height="300">
-			<section class="block_2"><img class="img_2" src="896586.jpg" width="488" height="300" alt="Клик для увеличения"></section>
-			<section class="block_2"><img class="img_2" src="896586.jpg" width="488" height="300" alt="Клик для увеличения"></section>
-			<section class="block_2"><img class="img_2" src="896586.jpg" width="488" height="300" alt="Клик для увеличения"></section>
+			<div>
+				<p class="up_block" class="block_2">Hello</p>
+				<section class="block_2"><img class="img_2" src="896586.jpg" width="488" height="300" alt="Клик для увеличения"></section>			
+			</div>
+			<div>
+				<p class="up_block" class="block_2">Hello</p>
+				<section class="block_2"><img class="img_2" src="896586.jpg" width="488" height="300" alt="Клик для увеличения"></section>			
+			</div>
+			<div>
+				<p class="up_block" class="block_2">Hello</p>
+				<section class="block_2"><img class="img_2" src="896586.jpg" width="488" height="300" alt="Клик для увеличения"></section>			
+			</div>
 		</div>
 	</div>
 	
