--- a/index.html
+++ b/index.html
@@ -18,51 +18,51 @@
 	</div>
 	
 
-	<div class="block"><img class="im_block" src="111.jpg"></div>
+	<div class="block"><img class="im_block" src="image/111.png"></div>
 	
 	<div class="blocky">
 		<div class="scroll" wight="200" height="300">
 			<div>
 				<p class="up_block">Hello</p>
-				<section class="block_2"><img class="img_2" src="896586.jpg" width="488" height="300" alt="Клик для увеличения"></section>			
+				<section class="block_2"><img class="img_2" src="image/54395.jpg" width="30%" height="300" alt="Клик для увеличения"></section>			
 			</div>
 			<div>
 				<p class="up_block" class="block_2">Hello</p>
-				<section class="block_2"><img class="img_2" src="896586.jpg" width="488" height="300" alt="Клик для увеличения"></section>			
+				<section class="block_2"><img class="img_2" src="image/746849.jpg" width="30%" height="300" alt="Клик для увеличения"></section>			
 			</div>
 			<div>
 				<p class="up_block" class="block_2">Hello</p>
-				<section class="block_2"><img class="img_2" src="896586.jpg" width="488" height="300" alt="Клик для увеличения"></section>			
-			</div>
-		</div>
-
-		<div class="scroll" wight="200" height="300">
-			<div>
-				<p class="up_block" class="block_2">Hello</p>
-				<section class="block_2"><img class="img_2" src="896586.jpg" width="488" height="300" alt="Клик для увеличения"></section>			
-			</div>
-			<div>
-				<p class="up_block" class="block_2">Hello</p>
-				<section class="block_2"><img class="img_2" src="896586.jpg" width="488" height="300" alt="Клик для увеличения"></section>			
-			</div>
-			<div>
-				<p class="up_block" class="block_2">Hello</p>
-				<section class="block_2"><img class="img_2" src="896586.jpg" width="488" height="300" alt="Клик для увеличения"></section>			
+				<section class="block_2"><img class="img_2" src="image/896586.jpg" width="30%" height="300" alt="Клик для увеличения"></section>			
 			</div>
 		</div>
 
 		<div class="scroll" wight="200" height="300">
 			<div>
 				<p class="up_block" class="block_2">Hello</p>
-				<section class="block_2"><img class="img_2" src="896586.jpg" width="488" height="300" alt="Клик для увеличения"></section>			
+				<section class="block_2"><img class="img_2" src="image/746851.jpg" width="488" height="300" alt="Клик для увеличения"></section>			
 			</div>
 			<div>
 				<p class="up_block" class="block_2">Hello</p>
-				<section class="block_2"><img class="img_2" src="896586.jpg" width="488" height="300" alt="Клик для увеличения"></section>			
+				<section class="block_2"><img class="img_2" src="image/99707135.jpg" width="488" height="300" alt="Клик для увеличения"></section>			
 			</div>
 			<div>
 				<p class="up_block" class="block_2">Hello</p>
-				<section class="block_2"><img class="img_2" src="896586.jpg" width="488" height="300" alt="Клик для увеличения"></section>			
+				<section class="block_2"><img class="img_2" src="image/1570656317.jpg" width="488" height="300" alt="Клик для увеличения"></section>			
+			</div>
+		</div>
+
+		<div class="scroll" wight="200" height="300">
+			<div>
+				<p class="up_block" class="block_2">Hello</p>
+				<section class="block_2"><img class="img_2" src="image/896586.jpg" width="488" height="300" alt="Клик для увеличения"></section>			
+			</div>
+			<div>
+				<p class="up_block" class="block_2">Hello</p>
+				<section class="block_2"><img class="img_2" src="image/896586.jpg" width="488" height="300" alt="Клик для увеличения"></section>			
+			</div>
+			<div>
+				<p class="up_block" class="block_2">Hello</p>
+				<section class="block_2"><img class="img_2" src="image/896586.jpg" width="488" height="300" alt="Клик для увеличения"></section>			
 			</div>
 		</div>
 	</div>
