--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 </head>
 <body class="im_b">
 
+	<div class="gif" alt="ggg"></div>
 
 	<div class="head">
 		<div class="head_center">
@@ -14,7 +15,7 @@
 			
 	</div>
 	<div class="text_1">
-		<p class="cat_t">Cat</p>
+		<p class="cat_t" href="#">Cat</p>
 	</div>
 	
 
