--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
 	<link rel="stylesheet" type="text/css" href="rabot.css">
 	<title>hello</title>
+	<link rel="shortcut icon" href="image/44-.png" type="image/png">
 </head>
 <body class="im_b">
-	
 	<div class="head">
 		<div class="head_center">
 			<p class="text_header">Spice Must Flow!</p>
@@ -29,7 +29,7 @@
 
 		<div class="scroll" wight="200" height="300">
 			<div>
-				<p class="up_block">Hello</p>
+				<p class="up_block">Ночной пейзаж</p>
 				<section class="block_2"><img class="img_2" src="image/54395.jpg" width="30%" height="300" alt="Клик для увеличения"></section>			
 			</div>
 			<div>
