--- a/index.html
+++ b/index.html
@@ -67,6 +67,21 @@
 		<div class="scroll" wight="200" height="300">
 			<div>
 				<p class="up_block" class="block_2">Hello</p>
+				<section class="block_2"><img class="img_2" src="image/746851.jpg" width="488" height="300" alt="Клик для увеличения"></section>			
+			</div>
+			<div>
+				<p class="up_block" class="block_2">Hello</p>
+				<section class="block_2"><img class="img_2" src="image/99707135.jpg" width="488" height="300" alt="Клик для увеличения"></section>			
+			</div>
+			<div>
+				<p class="up_block" class="block_2">Hello</p>
+				<section class="block_2"><img class="img_2" src="image/1570656317.jpg" width="488" height="300" alt="Клик для увеличения"></section>			
+			</div>
+		</div>
+
+		<div class="scroll" wight="200" height="300">
+			<div>
+				<p class="up_block" class="block_2">Hello</p>
 				<section class="block_2"><img class="img_2" src="image/896586.jpg" width="488" height="300" alt="Клик для увеличения"></section>			
 			</div>
 			<div>
