--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 		<div class="head_center">
 			<p class="text_header">Spice Must Flow!</p>
 		</div>
-			
+		<a class="secret" href="s/index.html">0</a>
 	</div>
 	<div class="text_1">
-		<p class="cat_t" href="#">Cat</p>
+		<p class="cat_t" href="#" onclick="countRabbits()">Cat</p>
 	</div>
-	
+
 
 	<div class="block"><img class="im_block" src="image/111.png"></div>
 	
@@ -63,6 +63,7 @@
 		</div>
 		</div>
 
+		
 
 		<div class="scroll" wight="200" height="300">
 			<div>
