--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 			
 	</div>
 	<div class="text_1">
-		<p class="cat_t" href="#" onclick="countRabbits()">Cat</p>
+		<p class="cat_t" href="#" onclick="ff()">Cat</p>
 	</div>
 
 
